--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b494a6">  <td>19/07/19 15:01:22</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;eShopActivation.startBrowser()[pri:0, instance:eShopActivation.eShopActivation@86be70a]">&gt;&gt;startBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@511473681</td>   <td></td> </tr>
-<tr bgcolor="b494a6">  <td>19/07/19 15:01:51</td>   <td>28295</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="eShopActivation.onboardingFlow()[pri:0, instance:eShopActivation.eShopActivation@86be70a]">onboardingFlow</td> 
-  <td>main@511473681</td>   <td></td> </tr>
-<tr bgcolor="b494a6">  <td>19/07/19 15:01:51</td>   <td>28345</td> <td>&nbsp;</td><td title="&lt;&lt;eShopActivation.closeBrowser()[pri:0, instance:eShopActivation.eShopActivation@86be70a]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@511473681</td>   <td></td> </tr>
+<tr bgcolor="7f99f9">  <td>19/08/05 19:50:55</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;eShopActivation.startBrowser()[pri:0, instance:eShopActivation.eShopActivation@12f41634]">&gt;&gt;startBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="7f99f9">  <td>19/08/05 19:51:01</td>   <td>6609</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="eShopActivation.onboardingFlow()[pri:0, instance:eShopActivation.eShopActivation@12f41634]">onboardingFlow</td> 
+  <td>main@949057310</td>   <td></td> </tr>
+<tr bgcolor="7f99f9">  <td>19/08/05 19:51:16</td>   <td>20860</td> <td>&nbsp;</td><td title="&lt;&lt;eShopActivation.closeBrowser()[pri:0, instance:eShopActivation.eShopActivation@12f41634]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@949057310</td>   <td></td> </tr>
 </table>
