--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="81e873">  <td>19/07/30 12:04:37</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;eShopActivation.startBrowser()[pri:0, instance:eShopActivation.eShopActivation@7d70d1b1]">&gt;&gt;startBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@171497379</td>   <td></td> </tr>
-<tr bgcolor="81e873">  <td>19/07/30 12:04:47</td>   <td>10273</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="eShopActivation.onboardingFlow()[pri:0, instance:eShopActivation.eShopActivation@7d70d1b1]">onboardingFlow</td> 
-  <td>main@171497379</td>   <td></td> </tr>
-<tr bgcolor="81e873">  <td>19/07/30 12:05:02</td>   <td>25215</td> <td>&nbsp;</td><td title="&lt;&lt;eShopActivation.closeBrowser()[pri:0, instance:eShopActivation.eShopActivation@7d70d1b1]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@171497379</td>   <td></td> </tr>
+<tr bgcolor="d47cee">  <td>19/08/05 17:46:54</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;eShopActivation.startBrowser()[pri:0, instance:eShopActivation.eShopActivation@5ed828d]">&gt;&gt;startBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@175408781</td>   <td></td> </tr>
+<tr bgcolor="d47cee">  <td>19/08/05 17:47:04</td>   <td>10064</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="eShopActivation.onboardingFlow()[pri:0, instance:eShopActivation.eShopActivation@5ed828d]">onboardingFlow</td> 
+  <td>main@175408781</td>   <td></td> </tr>
+<tr bgcolor="d47cee">  <td>19/08/05 17:47:18</td>   <td>23558</td> <td>&nbsp;</td><td title="&lt;&lt;eShopActivation.closeBrowser()[pri:0, instance:eShopActivation.eShopActivation@5ed828d]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@175408781</td>   <td></td> </tr>
 </table>
