Updating the Indentifications and Payment types

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -194,12 +194,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'onboardingFlow')
 data.setCell(0, 2, 'eShopActivation.eShopActivation')
-data.setCell(0, 3, 43161);
+data.setCell(0, 3, 70242);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 43 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -232,11 +232,11 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">onboardingFlow</span>
-                <span class="method-start">9611 ms</span>
+                <span class="method-start">21210 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">52775 ms</span>
+                <span class="method-start">91457 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
